# litGraph

./: .gitignore  AGENTS.md  AGENT_DX.md  CLAUDE_CODE_FEATURES.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  INTEGRATION_TESTS.md  MIDDLEWARE.md  MISSING_FEATURES.md  README.md  RELEASING.md  ROADMAP.md  USAGE.md  pyproject.toml  pytest.ini
crates/litgraph-agents/: Cargo.toml
crates/litgraph-agents/src/: critique_revise.rs  debate.rs  lib.rs  map_reduce.rs  middleware.rs  plan_execute.rs  react.rs  refine.rs  subagent.rs  supervisor.rs  text_react.rs
crates/litgraph-agents/tests/: react.rs
crates/litgraph-bench/: Cargo.toml
crates/litgraph-bench/src/: lib.rs
crates/litgraph-embeddings-fastembed/: .gitignore  Cargo.toml
crates/litgraph-embeddings-fastembed/src/: lib.rs
crates/litgraph-graph/: Cargo.toml
crates/litgraph-graph/src/: checkpoint.rs  interrupt.rs  lib.rs  node.rs  state.rs  visualize.rs
crates/litgraph-loaders/: Cargo.toml
crates/litgraph-loaders/src/: arxiv.rs  bitbucket.rs  bitbucket_files.rs  concurrent.rs  discord.rs  gmail.rs  hackernews.rs  html.rs  http_prompt_hub.rs  ingest.rs  jira.rs  lib.rs  linear.rs  outlook.rs  pubmed.rs  rss.rs  s3.rs  stackexchange.rs  wikipedia.rs  youtube.rs
crates/litgraph-memory-postgres/: Cargo.toml
crates/litgraph-memory-redis/: Cargo.toml
crates/litgraph-memory-redis/src/: lib.rs
crates/litgraph-memory-sqlite/: Cargo.toml
crates/litgraph-memory-sqlite/src/: lib.rs
crates/litgraph-providers-cohere/: Cargo.toml
crates/litgraph-providers-cohere/src/: lib.rs
crates/litgraph-providers-jina/: Cargo.toml
crates/litgraph-providers-jina/src/: lib.rs
crates/litgraph-rerankers-fastembed/: .gitignore  Cargo.toml
crates/litgraph-rerankers-fastembed/src/: lib.rs
crates/litgraph-rerankers-jina/: Cargo.toml
crates/litgraph-resilience/: Cargo.toml
crates/litgraph-resilience/src/: lib.rs
crates/litgraph-serve/: Cargo.toml
crates/litgraph-serve/src/: auth.rs  lib.rs  resume.rs  studio.rs  ws.rs  ws_compat.rs
crates/litgraph-store-postgres/: Cargo.toml
crates/litgraph-store-postgres/src/: lib.rs
crates/litgraph-tools-utils/: Cargo.toml
crates/litgraph-tools-utils/src/: base64_tool.rs  cached.rs  current_time.rs  dalle.rs  datetime_parse.rs  filesystem.rs  gmail_send.rs  hash.rs  html_to_text.rs  http_request.rs  json_extract.rs  json_patch.rs  jwt_decode.rs  lib.rs  planning.rs  regex_extract.rs  slugify.rs  sqlite_query.rs  text_diff.rs  url_parse.rs  uuid_tool.rs  virtual_fs.rs  web_fetch.rs  webhook.rs  whisper.rs
crates/litgraph-tracing-otel/: Cargo.toml
crates/litgraph-tracing-otel/src/: exemplars.rs  lib.rs
litGraph/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  FEATURES.md  FREE_THREADING.md  KNOWLEDGE.md  LICENSE  pyproject.toml
litGraph/.claude/: ralph-loop.local.md
litGraph/.github/workflows/: test.yml
litGraph/crates/litgraph-agents/: Cargo.toml
litGraph/crates/litgraph-agents/src/: lib.rs  react.rs  text_react.rs
litGraph/crates/litgraph-agents/tests/: react.rs  supervisor.rs
litGraph/crates/litgraph-bench/benches/: bm25.rs  cache.rs  graph_parallel.rs  hnsw.rs  splitters.rs
litGraph/crates/litgraph-cache/: Cargo.toml
litGraph/crates/litgraph-cache/src/: backend.rs  cached_model.rs  lib.rs  redis_backend.rs
litGraph/crates/litgraph-checkpoint-postgres/: Cargo.toml
litGraph/crates/litgraph-checkpoint-redis/: Cargo.toml
litGraph/crates/litgraph-checkpoint-sqlite/: Cargo.toml
litGraph/crates/litgraph-core/: Cargo.toml
litGraph/crates/litgraph-core/src/: error.rs  (+13 more)
litGraph/crates/litgraph-loaders/: Cargo.toml
litGraph/crates/litgraph-macros/: Cargo.toml
litGraph/crates/litgraph-mcp/: Cargo.toml
litGraph/crates/litgraph-observability/: Cargo.toml
litGraph/crates/litgraph-providers-bedrock/: Cargo.toml
litGraph/crates/litgraph-providers-gemini/: Cargo.toml
litGraph/crates/litgraph-providers-openai/: Cargo.toml
litGraph/crates/litgraph-providers-voyage/: Cargo.toml
litGraph/crates/litgraph-py/: Cargo.toml
litGraph/crates/litgraph-rerankers-cohere/: Cargo.toml
litGraph/crates/litgraph-rerankers-voyage/: Cargo.toml
litGraph/crates/litgraph-resilience/: Cargo.toml
litGraph/crates/litgraph-retrieval/: Cargo.toml
litGraph/crates/litgraph-splitters/: Cargo.toml
litGraph/crates/litgraph-stores-chroma/: Cargo.toml
litGraph/crates/litgraph-stores-hnsw/: Cargo.toml
litGraph/crates/litgraph-stores-memory/: Cargo.toml
litGraph/crates/litgraph-stores-pgvector/: Cargo.toml
litGraph/crates/litgraph-stores-qdrant/: Cargo.toml
litGraph/crates/litgraph-stores-weaviate/: Cargo.toml
litGraph/crates/litgraph-tokenizers/: Cargo.toml
litGraph/crates/litgraph-tools-search/: Cargo.toml
litGraph/crates/litgraph-tools-utils/: Cargo.toml
litGraph/examples/: streaming_chat.py
litGraph/litgraph-stubs/: setup.py
litGraph/litgraph-stubs/litgraph-stubs/: agents.pyi  cache.pyi  embeddings.pyi  mcp.pyi  memory.pyi  observability.pyi  providers.pyi  retrieval.pyi  splitters.pyi  tokenizers.pyi  tools.pyi
litGraph/python_tests/: test_agent_stream.py  test_agent_stream_tokens.py  test_bedrock_embeddings.py  test_cached_tool.py  test_chroma.py  test_code_splitter_definitions.py  test_cohere.py  test_cohere_embeddings.py  test_contextual_compression.py  test_cost_capped_chat.py  test_default_prices.py  test_docx_loader.py  test_duckduckgo.py  test_embedding_resilience.py  test_eval.py  test_eval_harness.py  test_evaluators.py  test_example_selector.py  test_filesystem_tools.py  test_gdrive_loader.py  test_gemini_and_qdrant.py  test_gemini_embeddings.py  test_github_files_loader.py  test_gitlab_files_loader.py  test_gmail_loader.py  test_gmail_send_tool.py  test_graph.py  test_graph_send.py  test_graph_subgraph.py  test_jupyter_loader.py  test_linear_loader.py  test_list_parsers.py  test_llm_judge.py  test_llm_judge_scorer.py  test_mcp_client.py  test_memory.py  test_multi_query_retriever.py  test_new_bindings.py  test_openai_compat_helpers.py  test_openai_embeddings.py  (+28 more)
litGraph/python_tests/.claude/: ralph-loop.local.md
(+475 files in other folders)
