[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "litgraph"
requires-python = ">=3.9"
description = "Production-grade slim alternative to LangChain/LangGraph. Rust core, Python bindings."
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[tool.maturin]
manifest-path = "crates/litgraph-py/Cargo.toml"
# Native module placed inside the `litgraph` package as `litgraph.litgraph`,
# letting the pure-Python sugar in `python/litgraph/__init__.py` re-export
# the native API while adding decorators (functional.py).
module-name = "litgraph.litgraph"
python-source = "python"
features = ["pyo3/extension-module"]
