[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "litgraph"
requires-python = ">=3.9"
description = "Production-grade slim alternative to LangChain/LangGraph. Rust core, Python bindings."
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Amiya Mandal" },
]
keywords = ["llm", "agents", "rag", "langchain", "langgraph", "rust", "pyo3"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/plutonium-guy/litGraph"
Repository = "https://github.com/plutonium-guy/litGraph"
Issues = "https://github.com/plutonium-guy/litGraph/issues"
Changelog = "https://github.com/plutonium-guy/litGraph/blob/main/CHANGELOG.md"

[project.scripts]
# `litgraph doctor` — env diagnostic for AI coding agents. See AGENT_DX.md §7.
litgraph = "litgraph._cli:main"

[tool.maturin]
manifest-path = "crates/litgraph-py/Cargo.toml"
# Native module placed inside the `litgraph` package as `litgraph.litgraph`,
# letting the pure-Python sugar in `python/litgraph/__init__.py` re-export
# the native API while adding decorators (functional.py).
module-name = "litgraph.litgraph"
python-source = "python"
features = ["pyo3/extension-module"]
# Files maturin must include in the sdist that aren't auto-discovered by
# walking `manifest-path`. PyPI strict-validates that any `License-File:`
# in the wheel METADATA also exists in the sdist; LICENSE lives at the
# workspace root, not under `crates/litgraph-py/`, so include it
# explicitly.
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "README.md", format = "sdist" },
]
