[package]
name = "litgraph-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Prebuilt agent patterns for litGraph. Tool-calling ReAct loop, supervisor, etc."

[dependencies]
litgraph-core.workspace = true
litgraph-graph.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
futures.workspace = true
futures-util.workspace = true
async-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
regex.workspace = true
moka = { workspace = true, features = ["sync"] }
blake3.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
async-trait.workspace = true
