[package]
name = "litgraph-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "litGraph StateGraph — typed state, reducers, Kahn-scheduled parallel DAG executor with HITL + checkpoints."

[dependencies]
litgraph-core.workspace = true
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
tokio-util.workspace = true
tokio-stream.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
bincode.workspace = true
rmp-serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "test-util"] }
