[package]
name = "litgraph-loaders"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Document loaders for litGraph — text, markdown, JSONL, directory glob, PDF (opt-in). Rayon-parallel ingestion."

[dependencies]
litgraph-core.workspace = true
rayon.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
glob.workspace = true
csv.workspace = true
regex.workspace = true
once_cell = "1"
reqwest = { workspace = true, features = ["blocking"] }
base64.workspace = true
# S3 loader — reuses hand-rolled SigV4 from litgraph-providers-bedrock
# (public module). ListObjectsV2 XML responses parsed with regex (leaf
# tags only — no attributes on data nodes, so regex is safe here).
litgraph-providers-bedrock.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures.workspace = true
# PDF text extraction is opt-in. lopdf is pure-Rust + handles font encoding so
# we don't need cargo install poppler / wasm-bindgen / native deps.
lopdf = { version = "0.40", optional = true }
# DOCX = zip of XMLs; extract text from `word/document.xml` with quick-xml.
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
quick-xml = { version = "0.36", optional = true }

[dev-dependencies]
tempfile = "3"
lopdf = "0.40"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = []
pdf = ["dep:lopdf"]
docx = ["dep:zip", "dep:quick-xml"]
