[package]
name = "litgraph-memory-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Postgres-backed durable conversation history. Distributed counterpart to SqliteChatHistory; per-message storage, pooled via deadpool-postgres."

[dependencies]
litgraph-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
