[package]
name = "litgraph-memory-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Redis-backed conversation history. Hot/ephemeral counterpart to PostgresChatHistory; per-session LIST + system-pin STRING + sessions SET."

[dependencies]
litgraph-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
redis = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
