[package]
name = "litgraph-memory-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Durable conversation history backed by SQLite. Survives process restarts; per-message storage for chronological replay; multi-session isolation by session_id key."

[dependencies]
litgraph-core.workspace = true
async-trait.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3"
