[package]
name = "litgraph-providers-cohere"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cohere chat (Command-R family) provider adapter for litGraph. Targets the v2/chat API; SSE streaming included."

[dependencies]
litgraph-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
async-stream.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
