[package]
name = "litgraph-providers-jina"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Jina AI embeddings adapter for litGraph (jina-embeddings-v3 with task-aware retrieval)."

[dependencies]
litgraph-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
