[package]
name = "litgraph-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Drop-in HTTP server for litGraph — serve any ChatModel as REST + SSE in one call. LangServe parity, axum-backed, zero config."

[dependencies]
litgraph-core.workspace = true
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "macros"] }
tokio = { workspace = true, features = ["net"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { workspace = true, features = ["json", "stream"] }
tower = { version = "0.5", features = ["util"] }
