[package]
name = "litgraph-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Drop-in HTTP server for litGraph — serve any ChatModel as REST + SSE in one call. LangServe parity, axum-backed, zero config."

[dependencies]
litgraph-core.workspace = true
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "macros"] }
tokio = { workspace = true, features = ["net"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
# Optional — only pulled in when the `studio` feature is enabled.
# Adds the LangGraph Studio-style debug endpoints over a `Checkpointer`.
litgraph-graph = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[features]
default = []
# Mounts /threads, /threads/:id/state, /history, /rewind, etc. on top
# of any `Arc<dyn Checkpointer>`. Off by default so the serve crate
# stays light when only /invoke + /stream are needed.
studio = ["dep:litgraph-graph", "dep:base64"]
# Mounts /ws (WebSocket) on top of the HTTP routes for full-duplex
# streaming + client-driven cancellation. Off by default; pulls
# axum's `ws` feature (tokio-tungstenite).
ws = ["axum/ws"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { workspace = true, features = ["json", "stream"] }
tower = { version = "0.5", features = ["util"] }
litgraph-graph = { workspace = true }
base64 = { workspace = true }
