[package]
name = "litgraph-store-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Postgres-backed Store for litGraph long-term memory. Durable distributed counterpart to InMemoryStore; namespace[] + jsonb + per-item TTL."

[dependencies]
litgraph-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
