[package]
name = "litgraph-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LLM response cache for litGraph — Cache trait + moka in-memory + SQLite-backed."

[dependencies]
litgraph-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
moka.workspace = true
blake3.workspace = true
rusqlite.workspace = true
bincode.workspace = true
parking_lot.workspace = true
rayon.workspace = true
redis.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tempfile = "3"
