[package]
name = "litgraph-checkpoint-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Postgres-backed Checkpointer for litGraph StateGraph. Pooled connections via deadpool-postgres; upserts via ON CONFLICT; WAL shard safe."

[dependencies]
litgraph-graph.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
