[package]
name = "litgraph-checkpoint-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Redis-backed Checkpointer for litGraph. Uses a sorted set per thread (score = step) for O(log n) latest-lookup; snapshots stored as bincode blobs."

[dependencies]
litgraph-graph.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
redis = { workspace = true }
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
