[package]
name = "litgraph-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "litGraph core types — messages, prompts, traits, errors. Zero PyO3."

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
minijinja.workspace = true
tracing.workspace = true
regex.workspace = true
once_cell = "1"
parking_lot.workspace = true
tokio = { workspace = true, optional = true }

[features]
default = []
runtime = ["tokio"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
