[package]
name = "litgraph-loaders"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Document loaders for litGraph — text, markdown, JSONL, directory glob. Rayon-parallel ingestion."

[dependencies]
litgraph-core.workspace = true
rayon.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
glob.workspace = true
csv.workspace = true
regex.workspace = true
once_cell = "1"
reqwest = { workspace = true, features = ["blocking"] }

[dev-dependencies]
tempfile = "3"
