[package]
name = "litgraph-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for litGraph — #[tool] attribute that derives ToolSchema from the argument type via schemars."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
litgraph-core.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
async-trait.workspace = true
