[package]
name = "litgraph-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Model Context Protocol (MCP) client for litGraph — stdio transport, tools/list + tools/call, bridges MCP server tools as litgraph_core::Tool."

[dependencies]
litgraph-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "macros", "sync", "time", "net"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util", "process", "io-util", "net"] }
tempfile = "3"
