[package]
name = "litgraph-providers-bedrock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AWS Bedrock provider adapter for litGraph. Hand-rolled SigV4 signing — no AWS SDK dependency tree. Anthropic Claude on Bedrock supported in v1; other model families require their own request body shapes."

[dependencies]
litgraph-core.workspace = true
async-trait.workspace = true
tokio = { workspace = true }
reqwest.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
chrono.workspace = true
async-stream.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
